--- a/GameChoice/gameChoice.html
+++ b/GameChoice/gameChoice.html
@@ -20,10 +20,12 @@
           <div class="TextBoxTitle">
             <p2> <b> Flappy Bird </b> </p2>
           </div>
-          <img class="screenshot" src="Screenshots/FlappyBird.png" alt="icon">
+            <a href="Games/BuildFlappyBird/FlappyBirdGame.html" target="_blank">
+              <img class="screenshot" src="Screenshots/FlappyBird.png" alt="icon">
+            </a>
           <div class="TextBox">
             <form action="Games/flappyBird.html">
-              <button> Vybrat </button>
+              <button> Vybrat šablonu </button>
             </form>
           </div>
         </div>
@@ -32,10 +34,12 @@
           <div class="TextBoxTitle">
             <p2> <b> PacMan </b> </p2>
           </div>
-          <img class="screenshot" src="Screenshots/Pacman.png" alt="icon">
+          <a href="Games/BuildPacman/PacmanGame.html" target="_blank">          
+            <img class="screenshot" src="Screenshots/Pacman.png" alt="icon">
+          </a>
           <div class="TextBox">
             <form action="Games/pacman.html">
-              <button> Vybrat </button>
+              <button> Vybrat šablonu </button>
             </form>
           </div>
         </div>
@@ -44,10 +48,12 @@
           <div class="TextBoxTitle">
             <p2> <b> Had </b> </p2>
           </div>
-          <img class="screenshot" src="Screenshots/Snake.png" alt="icon">
+          <a href="Games/BuildSnake/SnakeGame.html" target="_blank">          
+            <img class="screenshot" src="Screenshots/Snake.png" alt="icon">
+          </a>
           <div class="TextBox">
             <form action="Games/snake.html">
-              <button> Vybrat </button>
+              <button> Vybrat šablonu </button>
             </form>
           </div>
         </div>
@@ -56,10 +62,12 @@
           <div class="TextBoxTitle">
             <p2> <b> Sbírání hub</b> </p2>
           </div>
-          <img class="screenshot" src="Screenshots/Collecting.png" alt="icon">
+          <a href="Games/BuildCollecting/CollectingGame.html" target="_blank">          
+            <img class="screenshot" src="Screenshots/Collecting.png" alt="icon">
+          </a>
           <div class="TextBox">
             <form action="Games/collecting.html">
-              <button> Vybrat </button>
+              <button> Vybrat šablonu </button>
             </form>
           </div>
         </div>
@@ -67,10 +75,12 @@
           <div class="TextBoxTitle">
             <p2> <b> Chytání jablek </b> </p2>
           </div>
-          <img class="screenshot" src="Screenshots/Catching.png" alt="icon">
+          <a href="Games/BuildCatching/CatchingGame.html" target="_blank">          
+            <img class="screenshot" src="Screenshots/Catching.png" alt="icon">
+          </a>
           <div class="TextBox">
             <form action="Games/catching.html">
-              <button> Vybrat </button>
+              <button> Vybrat šablonu </button>
             </form>
           </div>
         </div>
