--- a/GameChoice/Games/BuildCatching/CatchingGame.html
+++ b/GameChoice/Games/BuildCatching/CatchingGame.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | Sbírání</title>
-    <link rel="shortcut icon" href="TemplateData/favicon.ico">
+    <title>Sbírání jablek</title>
+    <link rel="shortcut icon"  href="../Catching/icon.png">
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
   <body>
     <div id="unity-container" class="unity-desktop">
-      <canvas id="unity-canvas" width=600 height=960></canvas>
+      <canvas id="unity-canvas" width=960 height=600></canvas>
       <div id="unity-loading-bar">
         <div id="unity-logo"></div>
         <div id="unity-progress-bar-empty">
@@ -63,7 +64,7 @@
         codeUrl: buildUrl + "/BuildCatching.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "VlastniHryCC000",
-        productName: "Sbírání",
+        productName: "caat",
         productVersion: "1.2",
         showBanner: unityShowBanner,
       };
@@ -95,8 +96,8 @@
       } else {
         // Desktop style: Render the game canvas in a window that can be maximized to fullscreen:
 
-        canvas.style.width = "600px";
-        canvas.style.height = "960px";
+        canvas.style.width = "960px";
+        canvas.style.height = "600px";
       }
 
       loadingBar.style.display = "block";
