--- a/GameChoice/Games/BuildCollecting/CollectingGame.html
+++ b/GameChoice/Games/BuildCollecting/CollectingGame.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | Sbírání</title>
-    <link rel="shortcut icon" href="TemplateData/favicon.ico">
+    <title>Sbírání hub</title>
+    <link rel="shortcut icon"  href="../Collecting/icon.png">
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
   <body>
     <div id="unity-container" class="unity-desktop">
-      <canvas id="unity-canvas" width=600 height=960></canvas>
+      <canvas id="unity-canvas" width=400 height=700></canvas>
       <div id="unity-loading-bar">
         <div id="unity-logo"></div>
         <div id="unity-progress-bar-empty">
@@ -19,7 +19,6 @@
       <div id="unity-warning"> </div>
       <div id="unity-footer">
         <div id="unity-webgl-logo"></div>
-        <div id="unity-fullscreen-button"></div>
         <div id="unity-build-title">Sbírání</div>
       </div>
     </div>
@@ -28,7 +27,7 @@
       var canvas = document.querySelector("#unity-canvas");
       var loadingBar = document.querySelector("#unity-loading-bar");
       var progressBarFull = document.querySelector("#unity-progress-bar-full");
-      var fullscreenButton = document.querySelector("#unity-fullscreen-button");
+
       var warningBanner = document.querySelector("#unity-warning");
 
       // Shows a temporary message banner/ribbon for a few seconds, or
@@ -63,7 +62,7 @@
         codeUrl: buildUrl + "/BuildCollecting.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "VlastniHryCC000",
-        productName: "Sbírání",
+        productName: "caat",
         productVersion: "1.2",
         showBanner: unityShowBanner,
       };
@@ -95,8 +94,8 @@
       } else {
         // Desktop style: Render the game canvas in a window that can be maximized to fullscreen:
 
-        canvas.style.width = "600px";
-        canvas.style.height = "960px";
+        canvas.style.width = "400px";
+        canvas.style.height = "700px";
       }
 
       loadingBar.style.display = "block";
@@ -108,9 +107,6 @@
           progressBarFull.style.width = 100 * progress + "%";
         }).then((unityInstance) => {
           loadingBar.style.display = "none";
-          fullscreenButton.onclick = () => {
-            unityInstance.SetFullscreen(1);
-          };
         }).catch((message) => {
           alert(message);
         });
