--- a/GameChoice/Games/BuildPacman/PacmanGame.html
+++ b/GameChoice/Games/BuildPacman/PacmanGame.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | Pacman</title>
-    <link rel="shortcut icon" href="TemplateData/favicon.ico">
+    <title>Pacman</title>
+    <link rel="shortcut icon"  href="../Pacman/icon.png">
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
   <body>
     <div id="unity-container" class="unity-desktop">
-      <canvas id="unity-canvas" width=600 height=960></canvas>
+      <canvas id="unity-canvas" width=400 height=700></canvas>
       <div id="unity-loading-bar">
         <div id="unity-logo"></div>
         <div id="unity-progress-bar-empty">
@@ -56,14 +56,14 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/PacmanBuild.loader.js";
+      var loaderUrl = buildUrl + "/BuildPacman.loader.js";
       var config = {
-        dataUrl: buildUrl + "/PacmanBuild.data",
-        frameworkUrl: buildUrl + "/PacmanBuild.framework.js",
-        codeUrl: buildUrl + "/PacmanBuild.wasm",
+        dataUrl: buildUrl + "/BuildPacman.data",
+        frameworkUrl: buildUrl + "/BuildPacman.framework.js",
+        codeUrl: buildUrl + "/BuildPacman.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "VlastniHryCC000",
-        productName: "Pacman",
+        productName: "pajmaj",
         productVersion: "1.2",
         showBanner: unityShowBanner,
       };
@@ -95,8 +95,8 @@
       } else {
         // Desktop style: Render the game canvas in a window that can be maximized to fullscreen:
 
-        canvas.style.width = "600px";
-        canvas.style.height = "960px";
+        canvas.style.width = "400px";
+        canvas.style.height = "700px";
       }
 
       loadingBar.style.display = "block";
@@ -108,9 +108,7 @@
           progressBarFull.style.width = 100 * progress + "%";
         }).then((unityInstance) => {
           loadingBar.style.display = "none";
-          fullscreenButton.onclick = () => {
-            unityInstance.SetFullscreen(1);
-          };
+
         }).catch((message) => {
           alert(message);
         });
