--- a/GameChoice/Games/flappyBird.html
+++ b/GameChoice/Games/flappyBird.html
@@ -17,15 +17,16 @@
       <br>      
       <p class="mainTitle"> Nastavení hry:  </p>
       <div class="games-container">
-        <div class="package">
+        <div class="package" style="height: 25vw;">
           <p class="firstDescriptionTitle"> Flappy Bird </p>
+          <p class="firstDescription"> <b> <-- </b>Vyzkoušejte si hru  </p>
           <br>
           <p class="firstDescription"> Ovládání: <i> kliknutí myši </i> </p>
           <br>
           <p class="firstDescription"> Cíl hry: <i> dostat se co nejdál </i> </p>
-          <iframe src="BuildFlappyBird/FlappyBirdGame.html"> </iframe>  
+          <iframe class="portrait" src="BuildFlappyBird/FlappyBirdGame.html"> </iframe>  
         </div>
-        <div class="package">
+        <div class="package" style="height: 25vw;">
           <p class="descriptionTitle"> Základní nastavení </p>
           <br>
           <div class="inputLine">
@@ -44,7 +45,7 @@
           <br><br><br>
           <div class="inputLine">
             <label for="icon">Ikona hry:</label> 
-            <img class="gameIcon" id="icon" alt="icon" src = "FlappyBird/FlappyBirdIcon.png">
+            <img class="gameIcon" id="icon" alt="icon" name="inputImage" src = "FlappyBird/FlappyBirdIcon.png">
             <input type="file" class="file" id="inputIcon" name="avatar" accept="image/png, image/jpeg" onchange="onCustomIconChange('inputIcon', 'icon')"/>
           </div>
           <br><br><br> <br>
@@ -54,11 +55,11 @@
           </div>
           <br><br> <br>
         </div>
-        <div class="package">
+        <div class="package" style="height: 25vw;">
           <p class="descriptionTitle"> Grafika: </p>
           <div class="inputLine">
             <label for="main">Hlavní postava:</label>
-            <img class="normalIcon" id="mainCharacterIcon" alt="icon" src = "FlappyBird/BirdYellow.png">
+            <img class="normalIcon" name="inputImage" id="mainCharacterIcon" alt="icon" src = "FlappyBird/BirdYellow.png">
             <select name="character" id="character" onclick='onCustomOptionChange("character", "mainCharacterIcon", "FlappyBird/BirdYellow.png", "FlappyBird/BirdRed.png", "FlappyBird/BirdGreen.png")'>
               <option value="1">Žlutý pták (výchozí)</option>
               <option value="2">Červený pták</option>
@@ -69,7 +70,7 @@
           <br><br><br> <br><br><br>
           <div class="inputLine">
             <label for="pipes">Trubky:</label>
-            <img class="normalIcon" id="PipeIcon" alt="icon" src = "FlappyBird/PipeGreen.png" style="width: 15px">
+            <img class="normalIcon" id="PipeIcon" name="inputImage" alt="icon" src = "FlappyBird/PipeGreen.png" style="width: 15px">
             <select name="pipe" id="pipe" onclick='onCustomOptionChange("pipe", "PipeIcon", "FlappyBird/PipeGreen.png", "FlappyBird/PipeYellow.png", "FlappyBird/PipePlastic.png")'>
               <option value="1">Zelená trubka (výchozí)</option>
               <option value="2">Žlutá trubka</option>
@@ -80,7 +81,7 @@
           <br><br> <br><br>
           <div class="inputLine">
             <label for="background">Pozadí:</label>
-            <img class="normalIcon" id="backgroundIcon" alt="icon" src = "FlappyBird/BackgroundCity.png" style="width: 60px">
+            <img class="normalIcon" id="backgroundIcon" name="inputImage" alt="icon" src = "FlappyBird/BackgroundCity.png" style="width: 60px">
             <select name="background" id="background" onclick=
             'onCustomOptionChange("background", "backgroundIcon", "FlappyBird/BackgroundCity.png", "FlappyBird/BackgroundForest.png", "FlappyBird/BackgroundDesert.png")'>
               <option value="1">Město (výchozí)</option>
@@ -90,41 +91,41 @@
             <input type="file" class="file" id="inputBackground" name="avatar" accept="image/png, image/jpeg" onchange="onCustomTextureChange('inputBackground', 'backgroundIcon')"/>
           </div>
         </div>
-        <div class="package">
+        <div class="package" style="height: 25vw;">
           <p class="descriptionTitle"> Zvukové efekty: </p>
           <div class="inputLine">
             <label for="main">Zvuk skoku:</label>
-            <select name="character" id="flySound" onclick='onCustomSoundOptionChange("flySound", "audio2", "flySoundPreview", "FlappyBird/fly1.mp3", "FlappyBird/fly2.mp3", "FlappyBird/kokodak.mp3")'>
+            <select name="character" id="flySound" onclick='onCustomSoundOptionChange("flySound", "audio2", "flySoundPreview", "FlappyBird/fly1.mp3", "FlappyBird/fly2.mp3", "FlappyBird/kokodak.mp3", "inputCharacter3")'>
               <option value="1">Mávnutí 1 (výchozí)</option>
               <option value="2">Mávnutí 2</option>
               <option value="3">Zvuk slepice</option>
             </select>
 
-            <input type="file" class="file" id="inputCharacter3" name="avatar" accept="audio/mpeg, audio/wav" onchange="onCustomSoundChange('inputCharacter3', 'flySoundPreview', 'audio2')"/>
+            <input type="file" class="file" id="inputCharacter3" name="inputAudio" accept="audio/mpeg, audio/wav" onchange="onCustomSoundChange('inputCharacter3', 'flySoundPreview', 'audio2')"/>
             <audio id="audio2" controls="controls">
-              <source id="flySoundPreview" type="audio/mpeg" src = "FlappyBird/fly1.mp3"> </source>
+              <source id="flySoundPreview" type="audio/mpeg"  name="sourceAudio" src = "FlappyBird/fly1.mp3"> </source>
             </audio>            
           </div>
           <br><br><br> <br><br><br>
           <div class="inputLine">
             <label for="main">Zvuk získání bodu:</label>
-            <select name="character" id="passSound" onclick='onCustomSoundOptionChange("passSound", "audio1", "passSoundPreview", "FlappyBird/pass1.wav", "FlappyBird/pass2.wav", "FlappyBird/pass3.wav")'>
+            <select name="character" id="passSound" onclick='onCustomSoundOptionChange("passSound", "audio1", "passSoundPreview", "FlappyBird/pass1.wav", "FlappyBird/pass2.wav", "FlappyBird/pass3.wav", "inputCharacter2")'>
               <option value="1">Cinknutí 1 (výchozí)</option>
               <option value="2">Cinknutí 2</option>
               <option value="3">Cinknutí 3</option>
             </select>
 
-            <input type="file" class="file" id="inputCharacter2" name="avatar" accept="audio/mpeg, audio/wav" onchange="onCustomSoundChange('inputCharacter2', 'passSoundPreview', 'audio1')"/>
-            <audio id="audio1" controls="controls">
-              <source id="passSoundPreview" src = "FlappyBird/pass1.wav"> </source>
-            </audio>            
+            <input type="file" class="file" id="inputCharacter2" name="inputAudio" accept="audio/mpeg, audio/wav" onchange="onCustomSoundChange('inputCharacter2', 'passSoundPreview', 'audio1')"/>
+            <audio id="audio1" controls="controls"> 
+              <source id="passSoundPreview"  name="sourceAudio" src = "FlappyBird/pass1.wav"> </source>
+            </audio>        
           </div>
         </div>
-        <div class="package">
+        <div class="package" style="height: 15vw;">
           <p class="descriptionTitle"> Herní nastavení: </p>
           <div class="inputLine">
             <label for="main">Obtížnost:</label>
-            <select name="character" id="flySound" onclick='onCustomSoundOptionChange("flySound", "audio", "flySoundPreview", "FlappyBird/fly1.mp3", "FlappyBird/fly2.mp3", "FlappyBird/kokodak.mp3")'>
+            <select name="inputPlayer" id="difficulity">
               <option value="1">Normální (výchozí)</option>
               <option value="2">Jednoduchá</option>
               <option value="3">Obtížná</option>
@@ -132,8 +133,11 @@
           </div>
         </div>      
         <div class="sendButton">
-          <button type="button" class="sendButton" onclick="sendEmail()" > Zaplatit </button>
-        </div>   
+          <button type="button" class="sendButton" onclick="enableLoading()" >   Pokračovat  </button>
+        </div>  
+        <div id="myProgress"> Počkejte prosím...<div class="loader" id="loading"></div> </div>
+        <form method="post">
+        </form>
       </div>
     </content>
 
