--- a/contact.html
+++ b/contact.html
@@ -10,9 +10,9 @@
     <top>
       <ul>
         <img class="icon" src="VlastniHryTextLogo.png" alt="logo">
-        <li><a class="active" href="index.html">Domů</a></li>
+        <li><a href="index.html">Domů</a></li>
         <li><a href="index.html#offers">Nabídky</a></li>
-        <li><a href="contact.html">Kontakt</a></li>
+        <li><a class="active" href="contact.html">Kontakt</a></li>
       </ul>
     </top>
     <p class="mainTitle">Kontaktní údaje: </p>
