--- a/indexMobile.html
+++ b/indexMobile.html
@@ -5,9 +5,8 @@
   <link rel="stylesheet" href="">
   <link rel="icon" type="jpg/png" href="pageIcon.png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link id="cssTopNav" rel="stylesheet" type="text/css" href="topnavPhone.css">
-  <link id="css" rel="stylesheet" type="text/css" href="indexPhone.css">
-
+  <link id="topnav" rel="stylesheet" type="text/css" href="topnav.css">
+  <link id="css" rel="stylesheet" type="text/css" href="indexMobile.css">
   </head><body>
     <top>
       <ul>
@@ -18,15 +17,16 @@
       </ul>
     </top>
     <content>
-      <div id="intro">        
-        <p class="mainTitle"> Co dát blízkému jako      dárek?     Darujte vlastní počítačovou nebo mobilní hru!  </p>
+      <div id="intro">             
+        <p class="mainTitle"> Co dát blízkému jako dárek? <br> Darujte vlastní počítačovou nebo mobilní hru!  </p>
+        
         <br>      
         <p class="mainText"> Chcete pro svoje blízké sehnat dárek, ale už nevíte jaký? <br> Máme pro vás řešení. Nabízíme vytvoření vlastní hry tak, <br> jak to potřebujete, která může být jak na počítač, tak na <br> mobilní zařízení. </p>    
-        <div class="screenshots">    
-          <img class="screenshot" src="screenshot1.png" alt="Screenshot1">
-          <img class="screenshot" src="screenshot2.jpg" alt="Screenshot2"> 
+
+        <div class="screenshot">
+          <img class="screenshot screenshot-1" src="screenshot1.png" alt="Screenshot1">
+          <img class="screenshot screenshot-2" src="screenshot2.jpg" alt="Screenshot2">
         </div>
-        <br>
       </div>
       <div id="offers">
         <div class="games-container">
